Fixed alignment

--- a/src/Components/Cards/Card/Card.module.css
+++ b/src/Components/Cards/Card/Card.module.css
@@ -11,7 +11,7 @@
 
 @media only screen and (max-width: 600px) {
     .infoCard{
-        width: 60%;
+        width: 80%;
     }
 }
 
@@ -43,3 +43,4 @@
 .padding{
     padding: 4px;
 }
+
